# sdk_version_module

./: CMakeLists.txt  README.md  test_main.c
demo/: CMakeLists.txt  demo_basic.c  demo_fault.c  demo_guard.c  demo_ota.c
test/: test_main.c
version/: CMakeLists.txt  sdk_version.c  sdk_version.h  version_auto.h.in
